# mySoDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/mysodemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/mysodemo/: MainActivity.java  myModule.java
app/src/main/java/java/lang/krom/: IHook.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/mysodemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
